# poquito-smartphone

./: .gitignore  README.md  pyproject.toml  readme.md
drivers/: adc.c  i2c.c  i2c.h  mcp4725.c  mcp4725.h  registers.h  twi.c  twi.h  uart.c  uart.h
scripts/: detect_port.sh  requirements.txt  stream_audio.py
test-devices/max9814/: Makefile  README.md  test_max9814.c
test-devices/max9814/record_max9814/: README.md  record_audio.py  record_max9814.ino
test-devices/mcp4725_pam8403/: Makefile  README.md  i2c_scanner.c  stream_audio.py  test_audio_stream.c  test_audio_tones.c  test_mcp4725_pam8403.c
test-devices/microphone/: Makefile  README.md  record_audio.py
test-devices/microphone/test_microphone_c/: Makefile  README.md  estudio.md  record_max9814.c  test_max9814.c
test-devices/microphone/test_microphone_ino/: README.md
test-devices/speaker/: Makefile  README.md  i2c_scanner.c  test_audio_tones.c
test-devices/uart-bridge/: Makefile  README.md  test_uart_esp.c
test-devices/uart-bridge/echo/: Makefile  echo.ino
test-devices/wifi-udp/: README.md  udp_test.py
test-devices/wifi-udp/esp_udp_echo/: Makefile  esp_udp_echo.ino  secrets.h.example
